# lago-ost-plugin

./: .gitignore  Makefile  README.md  lago-ovirt.spec.in  requirements.txt  setup.cfg  setup.py  test-requires.txt  tox.ini
automation/: build-artifacts.packages  build-artifacts.packages.el7  build-artifacts.packages.el8  build-artifacts.sh  check-merged.sh  check-patch.packages  check-patch.packages.el7  check-patch.packages.el8  check-patch.repos  check-patch.repos.el7  check-patch.repos.el8  check-patch.sh  common.sh
docs/: Installation.rst  Makefile  conf.py  docs-requires.txt  index.rst  requires.txt
docs/_static/: ChangeLog.txt
ovirtlago/: cmd.py  constants.py  prefix.py  reposetup.py  server.py  testlib.py  utils.py  virt.py
ovirtlago/data/: ovirt_cpu_map.yaml
scripts/: check_style.sh  version_manager.py
tests/functional/: ovirt.basic.bats  ovirt.reposetup.bats  ovirt.runtest.bats  ovirt_common.bash
tests/functional/fixtures/ovirt.reposetup/: suite.yaml
tests/functional/fixtures/ovirt.runtest/: 001_basic_errored_test.py  001_basic_failed_test.py  001_basic_test.py  002_testlib.py  suite.yaml
tests/unit/ovirtlago/: test_ovirtlago_junitxml.py  test_ovirtlago_utils.py  test_runtest.py
