[metadata]
name = lago-ovirt
description =
    Lago plugin for ovirt-system-tests
license = GNU GPLv2+
author = David Caro
author_email = dcaro@redhat.com
url = http://ovirt-system-tests.readthedocs.io/

[files]
packages =
    ovirtlago


[flake8]
# ignore line break before operator
ignore = W503
exclude = */*venv/*,automation-build,rpmbuild,dist,tests/functional,.eggs

[package_data]
ovirtlago =
    *.xml

[entry_points]
lago.plugins.vm =
    ovirt-node=ovirtlago.virt:NodeVM
    ovirt-engine=ovirtlago.virt:EngineVM
    ovirt-host=ovirtlago.virt:HostVM
    ovirt-he-host=ovirtlago.virt:HEHostVM

lago.plugins.ovirt.cli =
    deploy=ovirtlago.cmd:do_deploy
    engine-setup=ovirtlago.cmd:do_ovirt_engine_setup
    reposetup=ovirtlago.cmd:do_ovirt_reposetup
    runtest=ovirtlago.cmd:do_ovirt_runtest
    serve=ovirtlago.cmd:do_ovirt_serve
