[metadata]
name = lago-ovirt
description =
    Lago plugin for ovirt-system-tests
license = GNU GPLv2+
author = David Caro
author_email = dcaro@redhat.com
url = http://ovirt-system-tests.readthedocs.io/

[files]
packages =
    ovirtlago

[package_data]
ovirtlago =
    *.xml

[entry_points]

lago.plugins.cli =
    ovirt=ovirtlago.cmd:OvirtCLI

lago.plugins.vm =
    default=lago.vm:DefaultVM
    ovirt-node=ovirtlago.virt:NodeVM
    ovirt-engine=ovirtlago.virt:EngineVM
    ovirt-host=ovirtlago.virt:HostVM
    ovirt-he-host=ovirtlago.virt:HEHostVM

lago.plugins.ovirt.cli =
    collect=ovirtlago.cmd:do_ovirt_collect
    deploy=ovirtlago.cmd:do_deploy
    engine-setup=ovirtlago.cmd:do_ovirt_engine_setup
    start=ovirtlago.cmd:do_ovirt_start
    stop=ovirtlago.cmd:do_ovirt_stop
    start-hosts=ovirtlago.cmd:do_ovirt_start_hosts
    stop-hosts=ovirtlago.cmd:do_ovirt_stop_hosts
    stop-vms=ovirtlago.cmd:do_ovirt_stop_vms
    start-vms=ovirtlago.cmd:do_ovirt_start_vms
    status=ovirtlago.cmd:do_ovirt_status
    reposetup=ovirtlago.cmd:do_ovirt_reposetup
    runtest=ovirtlago.cmd:do_ovirt_runtest
    serve=ovirtlago.cmd:do_ovirt_serve
